--- a/_config.yml
+++ b/_config.yml
@@ -28,9 +28,9 @@ twitter_username: afranzela
 github_username:  AfraIsNotAvailable
 
 # Build settings
-theme: minima
+remote_theme: pages-themes/hacker@v0.2.0
 plugins:
-  - jekyll-feed
+  - jekyll-feed, jekyll-remote-theme
 
 # Exclude from processing.
 # The following items will not be processed, by default.
